gnuspool (1.6-1) unstable; urgency=low

  * Initial release

 -- John M Collins (Xi Software Ltd) <jmc@xisl.com>  Fri, 10 Apr 2009 22:01:37 +0100
