@@ -1,2 +1,1 @@
-usr/share/doc/gnuspool/*.pdf.gz
-usr/share/doc/gnuspool/*.pdf
+usr/share/doc/gnuspool
