@@ -1,136 +1,9 @@
-etc/default/gnuspool
-etc/init.d/gnuspool
 etc/gnuspool.ext
-usr/bin/gspl-charge
-usr/bin/gspl-conn
-usr/bin/gspl-disconn
-usr/bin/gspl-lpq
-usr/bin/gspl-lprm
-usr/bin/gspl-mpr
-usr/bin/gspl-mrspr
-usr/bin/gspl-nok
-usr/bin/gspl-ok
-usr/bin/gspl-padd
-usr/bin/gspl-pchange
-usr/bin/gspl-pdel
-usr/bin/gspl-phalt
-usr/bin/gspl-pinter
-usr/bin/gspl-plist
-usr/bin/gspl-pq
-usr/bin/gspl-pr
-usr/bin/gspl-pstat
-usr/bin/gspl-pstop
-usr/bin/gspl-qchange
-usr/bin/gspl-qdel
-usr/bin/gspl-qlist
-usr/bin/gspl-release
-usr/bin/gspl-rpr
-usr/bin/gspl-start
-usr/bin/gspl-stop
-usr/bin/gspl-suspend
-usr/bin/gspl-uchange
-usr/bin/gspl-ulist
-usr/bin/gspl-user
-usr/bin/gspl-xpq
-usr/bin/gspl-xuser
-usr/lib/libgnuspool_curs*.so*
-usr/lib/libgnuspool_curs.la
-usr/lib/libgnuspool_int*.so*
-usr/lib/libgnuspool_int.la
-usr/lib/gnuspool/dosspwrite
-usr/lib/gnuspool/gtksave
-usr/lib/gnuspool/pclbanner
-usr/lib/gnuspool/psbanner
-usr/lib/gnuspool/spd
-usr/lib/gnuspool/spdinit
-usr/lib/gnuspool/spexec
-usr/lib/gnuspool/spmdisp
-usr/lib/gnuspool/sppwchk
-usr/lib/gnuspool/spshed
-usr/lib/gnuspool/spwrite
-usr/lib/gnuspool/xilp
-usr/lib/gnuspool/xtelnet
-usr/lib/gnuspool/xtftp
-usr/lib/gnuspool/xtlhp
-usr/lib/gnuspool/xtlpc
-usr/lib/gnuspool/xtlpd
-usr/lib/gnuspool/xtlpq
-usr/lib/gnuspool/xtlprm
-usr/lib/gnuspool/xtnetserv
-usr/lib/gnuspool/cgi-bin/spccgi
-usr/lib/gnuspool/cgi-bin/spcgi
-usr/lib/gnuspool/cgi-bin/sqccgi
-usr/lib/gnuspool/cgi-bin/sqcgi
-usr/lib/gnuspool/cgi-bin/sqcrcgi
-usr/lib/gnuspool/cgi-bin/sqdcgi
-usr/lib/gnuspool/cgi-bin/sqvcgi
-usr/sbin/gspl-cjlist
-gnuspool/usr/sbin/gspl-cplist
-usr/sbin/gspl-getsnmp
-usr/sbin/gspl-hostedit
-usr/sbin/gspl-lpcover
-usr/sbin/gspl-lpstatc
-usr/sbin/gspl-netwcmd
-usr/sbin/gspl-passwd
-usr/sbin/gspl-pmenu
-usr/sbin/gspl-ptrinstall
-usr/sbin/gspl-ripc
-usr/sbin/gspl-setspdir
-usr/sbin/gspl-spuconv
-usr/share/doc/gnuspool/Admin2.pdf.gz
-usr/share/doc/gnuspool/API.pdf.gz
-usr/share/doc/gnuspool/changelog.Debian.gz
-usr/share/doc/gnuspool/Refman.pdf.gz
-usr/share/doc/gnuspool/Usrguide.pdf.gz
-usr/share/doc/gnuspool/Webint.pdf.gz
-usr/share/doc/gnuspool/Winint.pdf.gz
-usr/share/gnuspool/longlist
-usr/share/gnuspool/remove
-usr/share/gnuspool/shortlist
-usr/share/gnuspool/xtlhp-ctrl
-usr/share/gnuspool/xtlpc-ctrl
-usr/share/gnuspool/xtlpd-ctrl
-usr/share/gnuspool/xtsnmpdef
-usr/share/gnuspool/help/int-config
-usr/share/gnuspool/help/rest.help
-usr/share/gnuspool/help/splpd.help
-usr/share/gnuspool/help/spq.dumb
-usr/share/gnuspool/help/spq.help
-usr/share/gnuspool/help/spq.wy60
-usr/share/gnuspool/help/spq.xterm
-usr/share/gnuspool/help/spuser.dumb
-usr/share/gnuspool/help/spuser.help
-usr/share/gnuspool/help/spuser.wy60
-usr/share/gnuspool/help/spuser.xterm
-usr/share/gnuspool/help/xmspq.help
-usr/share/gnuspool/help/xmspuser.help
-usr/share/gnuspool/help/xspq.menu
-usr/share/gnuspool/help/xspqsel.menu
-usr/share/gnuspool/help/xspqview.menu
-usr/share/gnuspool/help/xspq.xpm
-usr/share/gnuspool/help/xspuser.menu
-usr/share/gnuspool/help/xspuser.xpm
-usr/share/gnuspool/Psetups/Epson.pi
-usr/share/gnuspool/Psetups/IBM.pi
-usr/share/gnuspool/Psetups/interfaces.list
-usr/share/gnuspool/Psetups/network.defs
-usr/share/gnuspool/Psetups/Network.expl
-usr/share/gnuspool/Psetups/parallel.defs
-usr/share/gnuspool/Psetups/Parallel.expl
-usr/share/gnuspool/Psetups/PCL1.pi
-usr/share/gnuspool/Psetups/PCL2bw.pi
-usr/share/gnuspool/Psetups/PCL2dbw.pi
-usr/share/gnuspool/Psetups/PCL2.pi
-usr/share/gnuspool/Psetups/PCLnoPS.pi
-usr/share/gnuspool/Psetups/PCLPS.pi
-usr/share/gnuspool/Psetups/prinoptlpd.defs
-usr/share/gnuspool/Psetups/printers.list
-usr/share/gnuspool/Psetups/printopts.defs
-usr/share/gnuspool/Psetups/serial.defs
-usr/share/gnuspool/Psetups/Serial.expl
-usr/share/gnuspool/Psetups/servers.list
-usr/share/gnuspool/Psetups/pihelp/*.txt
-usr/share/man/man1/*.1.gz
-usr/share/man/man3/*.3.gz
-usr/share/man/man5/*.5.gz
-usr/share/man/man8/*.8.gz
+usr/bin
+usr/lib/gnuspool
+usr/sbin
+usr/share/gnuspool
+usr/share/man/man1
+usr/share/man/man5
+usr/share/man/man8
+var/spool/gnuspool
