@@ -21,7 +21,6 @@ set -e
 
 case "$1" in
     purge|remove|abort-install|disappear)
-	ldconfig
 	grep -q '^gnuspool:' /etc/passwd && userdel gnuspool
     ;;
 
