@@ -1,0 +1,2 @@
+usr/lib/libgnuspool*.so.*
+usr/lib/libgnuspool*.so
