@@ -1,0 +1,4 @@
+usr/include
+usr/lib/lib*.a
+usr/lib/lib*.la
+usr/share/man/man3
