@@ -1,6 +1,0 @@
-usr/include/gspool.h
-usr/lib/libgnuspool.a
-usr/lib/libgnuspool-*.so.*
-usr/lib/libgnuspool.la
-usr/lib/libgnuspool.so
-usr/share/man/man3/*
