@@ -1,2 +1,0 @@
-libgnuspool_int-1 1 (>= 1.0.6)
-libgnuspool_curs-1 1 (>= 1.0.6)
