@@ -1,1 +1,0 @@
-libgnuspool-1 1 (>= 1.0.6)
