@@ -1,6 +1,12 @@
 gnuspool (1.6-1) unstable; urgency=low
 
+  [ John M Collins (Xi Software Ltd) ]
   * Initial release
 
- -- John M Collins (Xi Software Ltd) <jmc@xisl.com>  Fri, 10 Apr 2009 22:01:37 +0100
+  [ Philip Hands ]
+  * bump stabdards version
+  * switch to using dh_install rather than ccpack
+  * rename libgnuspool to libgnuspool-1-1, and move all .so files here
+  * add libgnuspool-dev package for .a & .h files
 
+ -- John M Collins (Xi Software Ltd) <jmc@xisl.com>  Fri, 10 Apr 2009 22:01:37 +0100
